--- a/mou/templates/mou/show_database.html
+++ b/mou/templates/mou/show_database.html
@@ -6,6 +6,7 @@
     <title>Database Records</title>
 </head>
 <body>
+    {% include 'mou/_navbar.html' %}
     <h1>Event Records</h1>
     <table border="1">
         <thead>
