--- a/mou/templates/mou/mou_list.html
+++ b/mou/templates/mou/mou_list.html
@@ -75,25 +75,7 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-bit navbar-expand-lg">
-        <div class="container">
-            <a class="navbar-brand" href="{% url 'mou_list' %}">
-                <img src="https://www.bitsathy.ac.in/wp-content/themes/baiotsathycollege/assets/images/header%2006.png" alt="BIT Logo">
-                <span class="text-white ms-2">Bannari Amman Institute of Technology</span>
-            </a>
-            <div class="d-flex">
-                <a href="{% url 'filter_mou' %}" class="text-white text-decoration-none me-3">Filter MOUs</a>
-                <a href="{% url 'create_mou' %}" class="text-white text-decoration-none me-3">Create New MOU</a>
-                <a href="{% url 'mou_list' %}" class="text-white text-decoration-none me-3">Home</a>
-                <a href="{% url 'about' %}" class="text-white text-decoration-none me-3">About </a>
-                {% if user.is_authenticated %}
-                    <a href="{% url 'logout' %}" class="text-white text-decoration-none">Logout</a>
-                {% else %}
-                    <a href="{% url 'login' %}" class="text-white text-decoration-none">Login</a>
-                {% endif %}
-            </div>
-        </div>
-    </nav>
+     {% include 'mou/_navbar.html' %}
 
      <!-- Main Content -->
     <div class="container container-main">
@@ -117,11 +99,13 @@
                                         </div>
                                         <div class="btn-group">
                                             <a href="{% url 'view_mou' mou.id %}" class="btn btn-sm btn-outline-secondary">View</a>
-                                            <a href="{% url 'edit_mou' mou.id %}" class="btn btn-sm btn-outline-secondary">Edit</a>
-                                            <form action="{% url 'delete_mou' mou.id %}" method="post" class="d-inline">
-                                                {% csrf_token %}
-                                                <button type="submit" class="btn btn-sm btn-outline-danger">Delete</button>
-                                            </form>
+                                            {% if user.is_authenticated %}
+                                                <a href="{% url 'edit_mou' mou.id %}" class="btn btn-sm btn-outline-secondary">Edit</a>
+                                                <form action="{% url 'delete_mou' mou.id %}" method="post" class="d-inline">
+                                                    {% csrf_token %}
+                                                    <button type="submit" class="btn btn-sm btn-outline-danger">Delete</button>
+                                                </form>
+                                            {% endif %}
                                         </div>
                                     </div>
                                 </div>
@@ -146,11 +130,13 @@
                                         </div>
                                         <div class="btn-group">
                                             <a href="{% url 'view_mou' mou.id %}" class="btn btn-sm btn-outline-secondary">View</a>
-                                            <a href="{% url 'edit_mou' mou.id %}" class="btn btn-sm btn-outline-secondary">Edit</a>
-                                            <form action="{% url 'delete_mou' mou.id %}" method="post" class="d-inline">
-                                                {% csrf_token %}
-                                                <button type="submit" class="btn btn-sm btn-outline-danger">Delete</button>
-                                            </form>
+                                            {% if user.is_authenticated %}
+                                                <a href="{% url 'edit_mou' mou.id %}" class="btn btn-sm btn-outline-secondary">Edit</a>
+                                                <form action="{% url 'delete_mou' mou.id %}" method="post" class="d-inline">
+                                                    {% csrf_token %}
+                                                    <button type="submit" class="btn btn-sm btn-outline-danger">Delete</button>
+                                                </form>
+                                            {% endif %}
                                         </div>
                                     </div>
                                 </div>
