--- a/mou/templates/mou/_navbar.html
+++ b/mou/templates/mou/_navbar.html
@@ -10,6 +10,7 @@
                 <a href="{% url 'create_mou' %}" class="text-white text-decoration-none me-3">Create New MOU</a>
             {% endif %}
             <a href="{% url 'mou_list' %}" class="text-white text-decoration-none me-3">Home</a>
+            <a href="{% url 'org_login_request' %}" class="text-white text-decoration-none me-3">Organization Login</a>
             <a href="{% url 'about' %}" class="text-white text-decoration-none me-3">About </a>
             {% if user.is_authenticated %}
                 {% if user.is_staff %}
@@ -21,6 +22,11 @@
             {% else %}
                 <a href="/admin/" class="text-white text-decoration-none me-3">Admin Login</a>
                 <a href="{% url 'login' %}" class="text-white text-decoration-none">Login</a>
+            {% endif %}
+
+            {% if request.session.org_email %}
+                <span class="text-white ms-3">Org: {{ request.session.org_email }}</span>
+                <a href="{% url 'org_logout' %}" class="text-white text-decoration-none ms-2">Org Logout</a>
             {% endif %}
         </div>
     </div>
