--- a/mou/templates/mou/about.html
+++ b/mou/templates/mou/about.html
@@ -147,7 +147,7 @@
                                 </a>
                             </li>
                             <li>
-                                <strong>GNAMASHEKAR S:</strong>
+                                <strong>GNANASHEKAR S:</strong>
                                 <a href="mailto:gnanashekar.cs22@bitsathy.ac.in" class="text-decoration-none d-block">
                                     gnanashekar.cs22@bitsathy.ac.in
                                 </a>
