--- a/mou/templates/mou/_navbar.html
+++ b/mou/templates/mou/_navbar.html
@@ -9,7 +9,10 @@
             {% if user.is_authenticated %}
                 <a href="{% url 'create_mou' %}" class="text-white text-decoration-none me-3">Create New MOU</a>
             {% endif %}
+             {% if not request.session.org_email %}
             <a href="{% url 'mou_list' %}" class="text-white text-decoration-none me-3">Home</a>
+            {% endif %}
+             
             {% comment %} <a href="{% url 'org_login_request' %}" class="text-white text-decoration-none me-3">Organization Login</a> {% endcomment %}
             <a href="{% url 'about' %}" class="text-white text-decoration-none me-3">About </a>
             {% if user.is_authenticated %}
